--- a/project_frountend/indexTest.html
+++ b/project_frountend/indexTest.html
@@ -8,7 +8,10 @@
     <script src = "src/main.js" type = "text/javascript"></script>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>This HTML code is inside of a '.erb' file in the views directory, where it belongs.</p>
+    <h1>Login</h1>
+    <form class="login" id="login">
+      <input type="string" name="username" placeholder="Username">
+      <input type="submit">
+    </form>
   </body>
 </html>
