functioning welcome page and edit modal

--- a/project_frountend/index.html
+++ b/project_frountend/index.html
@@ -21,8 +21,15 @@
 
       <!-- APP SCREEN -->
       <div class="hidden" id="the_app">
-        <div class="btn-div">
-          <button class="js-btn btns">ADD A TOMBSTONE</button></div>
+
+        <header>
+          <ul class="nav-bar">
+            <li class="js-user"></li>
+            <li>SEARCH BAR: _____</li>
+            <li>FILTER PLACE HOLDER</li>
+            <li><button class="js-btn btns">ADD A TOMBSTONE</button></li>
+          </ul>
+        </header>
        <div class="graveyard">
          <!-- ADD TOMBS -->
        </div>
@@ -44,6 +51,8 @@
 
       </div>  <!-- end of app -->
 
+      <script src = "src/welcome.js" type = "text/javascript"></script>
+      <script src = "src/modal.js" type = "text/javascript"></script>
       <script src = "src/main.js" type = "text/javascript"></script>
   </body>
 
