--- a/project_frountend/index.html
+++ b/project_frountend/index.html
@@ -50,7 +50,8 @@
         </div>
 
       </div>  <!-- end of app -->
-
+      
+      <script src = "src/apiAdapter.js" type = "text/javascript"></script>
       <script src = "src/welcome.js" type = "text/javascript"></script>
       <script src = "src/modal.js" type = "text/javascript"></script>
       <script src = "src/main.js" type = "text/javascript"></script>
