--- a/project_frountend/indexTest.html
+++ b/project_frountend/indexTest.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>My First View!!</title>
-    <script src = "src/apiAdapter.js" type = "text/javascript"></script>
-    <script src = "src/localStorage.js" type = "text/javascript"></script>
-    <script src = "src/main.js" type = "text/javascript"></script>
   </head>
   <body>
     <h1>Login</h1>
@@ -13,5 +10,14 @@
       <input type="string" name="username" placeholder="Username">
       <input type="submit">
     </form>
+    <h1>Search</h1>
+    <form class="search" id="search">
+      <input type="string" name="search" placeholder="Search">
+      <input type="submit">
+    </form>
+    <script src = "src/apiAdapter.js" type = "text/javascript"></script>
+    <script src = "src/localStorage.js" type = "text/javascript"></script>
+    <script src = "src/test.js" type = "text/javascript"></script>
+    <script src = "src/main.js" type = "text/javascript"></script>
   </body>
 </html>
