--- a/project_frountend/indexTest.html
+++ b/project_frountend/indexTest.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Login</h1>
-    <form class="login" id="login">
+    <form class="js-form" id="login">
       <input type="string" name="username" placeholder="Username">
       <input type="submit">
     </form>
@@ -15,8 +15,15 @@
       <input type="string" name="search" placeholder="Search">
       <input type="submit">
     </form>
+    <h1>Create Story</h1>
+    <form class="search" id="search">
+      <input type="string" name="search" placeholder="Search">
+      <input type="submit">
+    </form>
     <script src = "src/apiAdapter.js" type = "text/javascript"></script>
-    <script src = "src/localStorage.js" type = "text/javascript"></script>
+    <script src = "src/utility.js" type = "text/javascript"></script>
+    <script src = "src/welcome.js" type = "text/javascript"></script>
+    <script src = "src/modal.js" type = "text/javascript"></script>
     <script src = "src/test.js" type = "text/javascript"></script>
     <script src = "src/main.js" type = "text/javascript"></script>
   </body>
