--- a/project_frountend/indexTest.html
+++ b/project_frountend/indexTest.html
@@ -15,10 +15,19 @@
       <input type="string" name="search" placeholder="Search">
       <input type="submit">
     </form>
-    <h1>Create Story</h1>
-    <form class="search" id="search">
-      <input type="string" name="search" placeholder="Search">
-      <input type="submit">
+    <h1>Tell A Story</h1>
+    <form class="js-form">
+      <label for="title">Title</label><br>
+      <input id="title" type="text" placeholder="Title">
+      <select id="storyTag">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="mercedes">Mercedes</option>
+        <option value="audi">Audi</option>
+      </select>
+      <br><label for="content">Content</label><br>
+      <textarea id="content" rows="5" cols="50" class="form-control"></textarea><br>
+      <input type="submit" value="Submit!">
     </form>
     <script src = "src/apiAdapter.js" type = "text/javascript"></script>
     <script src = "src/utility.js" type = "text/javascript"></script>
