--- a/project_frountend/index.html
+++ b/project_frountend/index.html
@@ -64,8 +64,8 @@
             <h3>IT WORKED???</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <div class="like-div">
-              <button class="like-btn">💀</button>
-              <p>0</p>
+              <!-- <p class="js-likes">0</p> -->
+              <button class="like-btn">💀 0</button>
             </div>
             <!-- SHOW COMMENTS -->
             <div class="panel-group">
@@ -76,10 +76,10 @@
                   </h4>
                 </div>
                 <div id="collapse1" class="panel-collapse collapse">
-                  <div class="panel-body">
+                  <div class="panel-body js-comment-list">
+                    <!-- COMMENTS LIST -->
+                    <ul id="js-ul">
                     <ul>
-                      <li>hello</li>
-                    </ul>
                   </div>
                   <div class="panel-footer">
                     <form>
@@ -91,7 +91,7 @@
               </div>
             </div>
             <footer>
-              <p>tag, tag, tag</p>
+              <p id="js-tags"></p>
             </footer>
         </div>
 
