--- a/project_frountend/index.html
+++ b/project_frountend/index.html
@@ -67,6 +67,7 @@
             <div class="like-div">
               <!-- <p class="js-likes">0</p> -->
               <button class="like-btn">💀 0</button>
+              <button class="btns hidden" id="deleteBtn">💀 0</button>
             </div>
             <!-- SHOW COMMENTS -->
             <div class="panel-group">
@@ -83,8 +84,8 @@
                     <ul>
                   </div>
                   <div class="panel-footer">
-                    <form>
-                      <input type="text" name="comment-content" placeholder="your comment...">
+                    <form id="commentform">
+                      <input type="text" name="content" placeholder="your comment...">
                       <input class="comment-btn" type="submit" value="⇒">
                     </form>
                   </div>
