--- a/project_frountend/index.html
+++ b/project_frountend/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
   </head>
 
@@ -30,13 +32,23 @@
       <div class="hidden" id="the_app">
 
         <header>
-          <ul class="nav-bar">
-            <li class="logo">🔥 the graveyard</li>
-            <li class="js-user"></li>
-            <li>SEARCH BAR: _____</li>
-            <li><button class="js-btn btns">ADD A TOMBSTONE</button></li>
-          </ul>
+          <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <ul class="nav navbar-nav">
+                <li class="li-css"><a href="#">🔥 the graveyard</a></li>
+                <li class="li-css"><a href="#" id="js-user">sdfsdf</a></li>
+              </ul>
+              <form class="navbar-form navbar-left" id="search">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Search" name="search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+              <button class="js-btn btns">ADD A TOMBSTONE</button>
+            </div>
+          </nav>
         </header>
+
        <div class="graveyard">
          <!-- ADD TOMBS -->
        </div>
@@ -62,8 +74,8 @@
         <div id="showModal" class="modal">
           <div class="modal-content">
             <span class="close">&times;</span>
-            <h3>IT WORKED???</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3></h3>
+            <p></p>
             <div class="like-div">
               <!-- <p class="js-likes">0</p> -->
               <button class="like-btn">💀 0</button>
