--- a/project_frountend/index.html
+++ b/project_frountend/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
   </head>
 
@@ -37,12 +35,18 @@
               <ul class="nav navbar-nav">
                 <li class="li-css"><a href="#">🔥 the graveyard</a></li>
                 <li class="li-css"><a href="#" id="js-user">sdfsdf</a></li>
+                <li class="dropdown">
+                  <a class="dropdown-toggle" data-toggle="dropdown" id="filter" href="#">Filter <span class="caret"></span></a>
+                  <ul class="dropdown-menu" id="filterUl">
+                    <!-- ADD TAGS -->
+                  </ul>
+                </li>
               </ul>
               <form class="navbar-form navbar-left" id="search">
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Search" name="search">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">Search</button>
               </form>
               <button class="js-btn btns">ADD A TOMBSTONE</button>
             </div>
@@ -92,7 +96,7 @@
                 <div id="collapse1" class="panel-collapse collapse">
                   <div class="panel-body js-comment-list">
                     <!-- COMMENTS LIST -->
-                    <ul id="js-ul">
+                    <ul id="js-ul" class="comment-ul">
                     <ul>
                   </div>
                   <div class="panel-footer">
