--- a/project_frountend/indexTest.html
+++ b/project_frountend/indexTest.html
@@ -3,8 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>My First View!!</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
   </head>
   <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">WebSiteName</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Page 1-1</a></li>
+              <li><a href="#">Page 1-2</a></li>
+              <li><a href="#">Page 1-3</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Page 2</a></li>
+          <li><a href="#">Page 3</a></li>
+        </ul>
+      </div>
+    </nav>
     <h1>Login</h1>
     <form class="js-form" id="login">
       <input type="string" name="username" placeholder="Username">
@@ -29,11 +52,6 @@
       <textarea id="content" rows="5" cols="50" class="form-control"></textarea><br>
       <input type="submit" value="Submit!">
     </form>
-    <script src = "src/apiAdapter.js" type = "text/javascript"></script>
-    <script src = "src/utility.js" type = "text/javascript"></script>
-    <script src = "src/welcome.js" type = "text/javascript"></script>
-    <script src = "src/modal.js" type = "text/javascript"></script>
     <script src = "src/test.js" type = "text/javascript"></script>
-    <script src = "src/main.js" type = "text/javascript"></script>
   </body>
 </html>
