--- a/project_frountend/index.html
+++ b/project_frountend/index.html
@@ -23,7 +23,7 @@
           <input type="submit" value="ENTER" class="btns">
       </form>
       <div class="candle-img">
-        <img src="https://media.giphy.com/media/nzeGq8D8xRFWE/giphy.gif" height= 150px>
+        <img src="https://media.giphy.com/media/nzeGq8D8xRFWE/giphy.gif" height= "150px">
       </div>
     </div>
 
@@ -58,6 +58,8 @@
        <div class="graveyard">
          <!-- ADD TOMBS -->
        </div>
+
+       <img src="images/candle-img.gif" name="light" height= "150px" id="light-candle">
 
        <!-- MODAL NEW STORY -->
        <div id="myModal" class="modal">
