--- a/project_frountend/index.html
+++ b/project_frountend/index.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
   </head>
 
-  <body>
-
+  <body class="daytime">
+    <div class="ENTIRE-APP">
     <!-- WELCOME SCREEN-->
     <div class="login">
       <h3 id="front-title">the graveyard</h3>
@@ -61,6 +61,10 @@
 
        <img src="images/candle-img.gif" name="light" height= "150px" id="light-candle">
 
+       <div id="audio-bar">
+         <!-- AUDIO  -->
+       </div>
+
        <!-- MODAL NEW STORY -->
        <div id="myModal" class="modal">
          <div class="modal-content">
@@ -83,7 +87,7 @@
           <div class="modal-content">
             <span class="close">&times;</span>
             <h3 class="modal-titles"></h3>
-            <p id="story-content"></p>
+            <div class="words-con"><p id="story-content"></p></div>
             <div class="like-div">
               <!-- <p class="js-likes">0</p> -->
               <button class="like-btn">💀 0</button>
@@ -124,6 +128,7 @@
       <script src = "src/utility.js" type = "text/javascript"></script>
       <script src = "src/welcome.js" type = "text/javascript"></script>
       <script src = "src/main.js" type = "text/javascript"></script>
+    </div>
   </body>
 
 </html>
